--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -24,12 +24,10 @@
 	<section>
 
 		<!-- Instructions (step 1 and step 2) -->
-		<div class="instruction-container"><div class="circle-number"><p>1</p></div> <h3> Goto <span>teamone.uqcloud.net</span> </h3></div>
-		<div class="instruction-container"><div class="circle-number code"><p>2</p></div> <h3> Enter code <span id = "code"> 9ag </span> </h3></div>
-		<div class="instruction-bottom"></div>
+		<div class="instruction-container"><h3>For Students:</h3><div class="circle-number"><p>1</p></div> <h3> Goto <span>teamone.uqcloud.net</span> </h3>
+		<div class="circle-number code"><p>2</p></div> <h3> Enter code <span id = "code"> 9ag </span> </h3></div>
 		
 		<!-- The question goes here, get id question -->
-		<h2 class="instruction-q">QUESTION</div>
 		<h2 class="instruction-question"> <span id="question-title">Draw My House with a purple window and the sun shining outside</span> </h2>
 
 		<!-- RESPONSE FILLER -->
