--- a/pages/lecture-prepare.html
+++ b/pages/lecture-prepare.html
@@ -26,7 +26,7 @@
 	</section>
 
 	<!-- Body -->
-	<section>
+	<section class="list-subject">
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> Subjects </h2>
 		<!-- Body Subheading -->
