--- a/pages/lecture-subjects.html
+++ b/pages/lecture-subjects.html
@@ -20,7 +20,7 @@
 		</div>
 	</section>
 
-	<section>
+	<section class="list-subject">
 
 		<!-- Body Heading -->
 		<h2 class="type-body-heading"> Subjects </h2>
