--- a/pages/student-correctanswers.html
+++ b/pages/student-correctanswers.html
@@ -19,7 +19,7 @@
 		<div class="button-back-lecture-response" onclick="btnBack()"> <p> Back </p></div>
 		<div class="headerpos">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
-			<h3 class="typography-l-h3"> Responses - Prepare Mode </h3>
+			<h3 class="typography-l-h3"> Correct Responses </h3>
 		</div>
 	</div>
 </section>
