--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -25,8 +25,8 @@
 				var questionsListObject = JSON.parse(data);
 				if(questionsListObject.success==1) {
 					courseID = questionsListObject.subjectFull;
-					document.getElementById("code").textContent = questionsListObject.enteringCode;// 3 digit code
-					document.getElementById("subject").textContent = questionsListObject.subject;// course code
+					//document.getElementById("code").textContent = questionsListObject.enteringCode;// 3 digit code
+					//document.getElementById("subject").textContent = questionsListObject.subject;// course code
 					var questionListHTML = "";
 					//for (var i = 0; i < questionsListObject.questionsList.length; i++) {//generate all question from JSON
 						var question = questionsListObject.questionsList[0];
@@ -162,24 +162,26 @@
 
 
 	function deleteQuestion(questionID){
+		var confirmDelete = confirm("Are you sure you want to delete this question?");
+		if (confirmDelete){
+			$(document).ready(function(){
+				$.ajax({//delete question through ajax so it updates instantly
+					type: "POST",
+					url: '../uqDrawBackend/deleteQuestion.php',
+					data: {
+						questionID: questionID,
+					},
+					success:function(data){
+						//alert(result);
+						location.reload();
 
-		$(document).ready(function(){
-			$.ajax({//delete question through ajax so it updates instantly
-				type: "POST",
-				url: '../uqDrawBackend/deleteQuestion.php',
-				data: {
-					questionID: questionID,
-				},
-				success:function(data){
-					//alert(result);
-					location.reload();
-
-				},
-				error:function(data){
-					alert("Can't Reach server")
-				}
+					},
+					error:function(data){
+						alert("Can't Reach server")
+					}
+				});
 			});
-		});
+		}
 	}
 
     function submitQuestion(){
@@ -223,7 +225,7 @@
 			<div class="headerpos">
 			<a href="#"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
 			<!-- Title of the page -->
-			<h3 class='type-title'> Create Questions </h3>
+			<h3 class='type-title'> Prepare Mode </h3>
 			</div>
 			<!-- Switch button -->
 			<a id="goto-lecture-mode" href='lecture-questions.html'><div class='button-goto-lecture'> <p> goto Lecture Mode </p></div></a>
@@ -235,7 +237,7 @@
 		<!-- List the Questions -->
 	<section class = "list-make-green">
 		<!-- Body Heading -->
-		<h2 class="type-body-heading"> <span id="subject"> MATH 1061 </span> CODE: <span id="code">3FC</span> </h2>
+		<h1 class="type-body-heading"> Create Questions </h1>
 		<!-- Body Subheading -->
 		<h3 class="type-body-subheading"> Click the plus button to create a new question </h3>
 
