--- a/pages/lecture-question.html
+++ b/pages/lecture-question.html
@@ -28,7 +28,7 @@
 		 <h3 class="question-instruct"> Enter code <span class="question-goto" id = "code"> 9ag </span> </h3></div>
 		
 		<!-- The question goes here, get id question -->
-		<h2 class="instruction-question"> <span id="question-title">Draw My House with a purple window and the sun shining outside</span> </h2>
+		<h2 class="instruction-question">Question: <span id="question-title">Draw My House with a purple window and the sun shining outside</span> </h2>
 
 		<!-- RESPONSE FILLER -->
 		<!-- This works by increasing the inner divs width, so grab
