Some title changes

--- a/pages/lecture-prepare-responses.html
+++ b/pages/lecture-prepare-responses.html
@@ -18,7 +18,7 @@
 			<div class="button-back-prepare-response" onclick="btnBack()"> <p> Back </p></div>
 			<div class="headerpos">
 			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
-			<h3 class="typography-l-h3"> Responses - Prepare Mode </h3>
+			<h3 class="typography-l-h3"> Prepare Mode - Responses</h3>
 			</div>
 		</div>
 	</section>
@@ -101,7 +101,7 @@
 				<div>
 
 				<h2 className="type-body-heading">Question: {this.props.title}</h2>
-	<h3 className="type-body-response"> Response-{this.props.listLength} - Lecture {this.props.week}</h3>
+	<h3 className="type-body-response"> Responses - {this.props.listLength} - Lecture {this.props.week}</h3>
 
 	</div>
 	);
