--- a/pages/student-questions.html
+++ b/pages/student-questions.html
@@ -148,7 +148,7 @@
   <ul className="student-list" >  {openQuestions}</ul>
           <h2 className="type-body-heading"> <span> Closed Questions</span> </h2>
   <ul className="closed-questions" >  {notOpenQuestions}</ul>
-          <h2 className="type-body-heading"> <span> PREVIOUS RESPONSES </span> </h2>
+          <h2 className="type-body-heading"> <span> Correct Answers </span> </h2>
   <ul className="student-list" > {prevQuestions}</ul>
           </section>
 
