Validated html, validating CSS will take forever.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+	<title>UQ Draw</title>
   <!-- CSS -->
   <!-- just trying to commit something -->
   <link rel="stylesheet" href="css/main.css"> 
@@ -7,16 +9,15 @@
   <!-- Sets it as a mobile viewport if the user is on a mobile device -->
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
+  <!-- Library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
-
-<!-- Library -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 <body class="bg-prepare">
 	<!-- Header -->
 	<section>
 		<div class="header-startpage">
-			<img class='lecturer-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" />
+			<img class='lecturer-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" alt="" />
 			<h3 class="type-welcome"> Welcome <!-- type-welcome span --> <span id="start-username"></span></h3>
 		</div>
 	</section>
