--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-	<title>UQDraw</title>
+	<title>UQ Draw</title>
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0" />
     
     <!-- CSS -->
@@ -21,7 +21,7 @@
 			
 		<!-- Header Bar -->
 		<div id="headers-top-bar">
-			<img src="../assets/images/topbar-logo.png"></img>
+			<img src="../assets/images/topbar-logo.png" alt=""/>
 			<button id="menu"><span></span><span></span></button>
 
 			<div class="input-group">
@@ -37,7 +37,7 @@
 	    	<h1>Question:</h1>
 	    	<h2><span id="questionTitle"></span></h2>
 	    	<button id="insert-into-canvas">INSERT IMAGE INTO CANVAS</button>
-	    	<img id="image-question" src="../assets/images/graph.png" />
+	    	<img id="image-question" src="../assets/images/graph.png"  />
 	    </div>
 
 	    <!-- Initial Loader -->
