--- a/pages/lecture-makequestions.html
+++ b/pages/lecture-makequestions.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+	<title>UQ Draw</title>
 	 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
   <!-- CSS -->
@@ -7,7 +9,7 @@
   <link rel="stylesheet" href="../css/vendor/gridism.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">	</script>
-</head>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js "></script>
 <script type='text/javascript'>
@@ -216,6 +218,7 @@
     }
 
 </script>
+</head>
 <body class="bg-prepare">
 	<!-- Header -->
 	<section>
@@ -224,7 +227,7 @@
 			<a href='lecture-prepare.html'><div class='button-back-prepare-response'> <p> Back </p></div></a>
 			<!-- Logo (small) -->
 			<div class="headerpos">
-			<a href="#"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' /></a>
+			<a href="#"><img class='images-l-subjects' src='../assets/images/topbar-logo.png' alt=""/></a>
 			<!-- Title of the page -->
 			<h3 class='type-title'> Prepare Mode </h3>
 			</div>
