--- a/pages/lecture-questions.html
+++ b/pages/lecture-questions.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+	<title>UQ Draw</title>
   <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../css/vendor/gridism.css">
@@ -7,7 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js">	</script>
 	<script src="../js/jquery.cookie.js">	</script>
-</head>
+
 
 <script type='text/javascript'>
 	$(document).ready(function() {
@@ -91,15 +93,16 @@
 			   });
 		    }
 </script>
+</head>
 <body class="bg-lecture">
 
 	<section>
 		<div class="header-l-lecture">
 		<div class="headerpos">
-			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" />
+			<img class='images-l-subjects' src="../assets/images/topbar-logo.png" alt="" />
 			<h3 class="typography-l-h3"> Lecture Mode </h3>
 			</div>
-			<a id="goto-prepare-mode" href="lecture-makequestions.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div>
+			<a id="goto-prepare-mode" href="lecture-makequestions.html"><div class="button-goto-prepare"> <p> goto Prepare Mode </p></div></a>
 			<a href="../pages/lecture-subjects.html"><div class="button-back-lecture-response"> <p> Back</p></div></a>
 		</div>
 	</section>
@@ -153,7 +156,4 @@
 	</section>
 
 </body>
-	<!-- Library -->
-
-	<!-- JS -->
 </html>
