commented drawing app html page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UQ Draw</title>
+	<title>UQDraw</title>
 	
 	<!-- Meta Data -->
   <meta charset="UTF-8">
   <meta name="author" contents="TeamOne">
+  <meta name="description" contents="Home page for UQDraw">
 
   <!-- CSS -->
   <link rel="stylesheet" href="css/main.css"> 
