--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<section>
 		<div class="header-startpage">
 			<img class='lecturer-startpage-logo' src="assets/images/uqdraw-logo-transparent.png" alt="" />
-			<h3 class="type-welcome"> Welcome <!-- type-welcome span --> <span id="start-username"></span></h3>
+			<h3 class="type-welcome"> Welcome <!-- type-welcome span (gets user name) --> <span id="start-username"></span></h3>
 		</div>
 	</section>
 
