--- a/pages/drawing-app.html
+++ b/pages/drawing-app.html
@@ -34,8 +34,7 @@
 	   </div>
 
 	    <div id="question-container" class="closed">
-	    	<h1>Question:</h1>
-	    	<h2><span id="questionTitle"></span></h2>
+	    	<h1>Question: <span id="questionTitle"></span></h1>
 	    	<button id="insert-into-canvas">INSERT IMAGE INTO CANVAS</button>
 	    	<img id="image-question" src="../assets/images/graph.png" />
 	    </div>
